--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -7,12 +7,11 @@
         <groupId>com.test</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>spring</artifactId>
-
+    <packaging>jar</packaging>
     <name>spring</name>
-    <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
     <properties>
