--- a/java/pom.xml
+++ b/java/pom.xml
@@ -69,6 +69,12 @@
             <version>1.21</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
