--- a/java/pom.xml
+++ b/java/pom.xml
@@ -81,6 +81,12 @@
             <version>1.18.6</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
